ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstackprog-ingress
  namespace: fullstackprog
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: fullstackprog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fullstackprog-app-service
                port:
                  number: 80
    - host: phpmyadmin.fullstackprog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin-service
                port:
                  number: 80
